--- a/index.html
+++ b/index.html
@@ -9,10 +9,50 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Hello, world!</title>
+    <title>Ängholma Bed & Breakfast</title>
   </head>
+
+
   <body>
-    <h1>Hello, world!</h1>
+  <div class="container">
+  <img src="img/angholm.gif" class="marguv" class="bildv">
+  <img src="img/tysk.gif" class="bildh">
+  <img src="img/eng.gif" class="bildh">
+  </div>
+  <div class="container">
+  <div class="row">
+  <div class="col-lg-8">
+    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Ängholma B&B <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Om oss</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Skrakboet</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="#">Bokning</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="#">Utflykter / Aktiviteter</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="#">Kontakt</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+</div>
+</div>
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
