--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
 
   <body>
   <div class="container">
+  <div class="row">
+  <div class="col-md-12">
   <img src="img/angholm.gif" class="marguv" class="bildv">
   <img src="img/tysk.gif" class="bildh">
   <img src="img/eng.gif" class="bildh">
-  </div>
-  <div class="container">
-  <div class="row">
-  <div class="col-lg-8">
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,22 +28,22 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Ängholma B&B <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Ängholma B&B <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Om oss</a>
+        <a class="nav-link" href="oss.html">Om oss</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Skrakboet</a>
+        <a class="nav-link" href="skrakboet.html">Skrakboet</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="#">Bokning</a>
+        <a class="nav-link " href="bokning.html">Bokning</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="#">Utflykter / Aktiviteter</a>
+        <a class="nav-link " href="aktiviteter.html">Utflykter / Aktiviteter</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="#">Kontakt</a>
+        <a class="nav-link " href="kontakt.html">Kontakt</a>
       </li>
     </ul>
   </div>
