mer eller mindre klar med index-sidan

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
   <div class="row">
   <div class="col-md-12">
-  <img src="img/angholm.gif" class="marguv" class="bildv">
+  <img src="img/angholm.png" class="marguv" class="bildv">
   <img src="img/tysk.gif" class="bildh">
   <img src="img/eng.gif" class="bildh">
     
@@ -48,6 +48,20 @@
     </ul>
   </div>
 </nav>
+<img src="img/skrakboet2.png" class="bildh2">
+<h2>Välkommen till Ängholma Bed & Breakfast i hjärtat av Sveriges trådgård, Blekinge</h3>
+<p class="helvetica">Ängholma B & B ligger i Ronneby kommun precis vid havet i den vackra Vierydsfjorden i Blekinge Skärgård. 
+Här får ni ett rogivande boende året runt i ett modernt, välutrustat och fräscht hus för er själva. Perfekt för att koppla av, ladda batterierna, umgås, bada, måla, fiska eller skriva. 
+Om ni väljer Bed & Breakfast serverar vi en underbart god frukost med utsikt över havet i vårt hus eller utomhus vid fint väder. Vid självhushåll har ni allt ni behöver i Skrakboet.
+Skrakboet ligger vid havet, men den ljuvliga blekingska skogen finns bara runt hörnet.
+Vi som bor här, familjen Malmport, hälsar er varmt välkomna och vårt mål är att ge er ett boende med hög kvalité, god service och stor flexibilitet – allt för att ni ska trivas till det yttersta.<br><br>
+<strong>Kom och bo i Skrakboet!</strong></p>
+
+<div class="footer">
+<img src="img/skrakar.png" class="bildv">
+<p>Ängholma Bed & Breakfast, Blekinge <br>
+Väbynäsvägen 1, 372 63 Bräkne-Hoby, Sverige • Tel. +46 (0)733-992065 • <a href="mailto:welcome@angholma.se">welcome@angholma.se</a></p>
+</div>
 </div>
 </div>
 </div>
