--- a/oss.html
+++ b/oss.html
@@ -17,7 +17,7 @@
   <div class="container">
   <div class="row">
   <div class="col-md-12">
-  <img src="img/angholm.gif" class="marguv" class="bildv">
+  <img src="img/angholm.png" class="marguv" class="bildv">
   <img src="img/tysk.gif" class="bildh">
   <img src="img/eng.gif" class="bildh">
     
@@ -48,6 +48,15 @@
     </ul>
   </div>
 </nav>
+
+
+
+
+<div class="footer">
+<img src="img/skrakar.png" class="bildv">
+<p>Ängholma Bed & Breakfast, Blekinge <br>
+Väbynäsvägen 1, 372 63 Bräkne-Hoby, Sverige • Tel. +46 (0)733-992065 • <a href="mailto:welcome@angholma.se">welcome@angholma.se</a></p>
+</div>
 </div>
 </div>
 </div>
