--- a/skrakboet.html
+++ b/skrakboet.html
@@ -17,9 +17,9 @@
   <div class="container">
   <div class="row">
   <div class="col-md-12">
-  <img src="img/angholm.gif" class="marguv" class="bildv">
-  <img src="img/tysk.gif" class="bildh">
-  <img src="img/eng.gif" class="bildh">
+  <img src="img/angholm.png" class="marguv" class="bildv">
+  <img src="img/tysk.gif" class="bildh" onclick="språk()">
+  <img src="img/eng.gif" class="bildh" onclick="språk()">
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,6 +48,16 @@
     </ul>
   </div>
 </nav>
+
+<p>Kom och bo i Skrakboet på Ängholma Bed & Breakfast i Blekinge!
+Skrakboet är ett ljust och fräscht hus på drygt 50 m2, med två sovrum, vardagsrum, fullt utrustat kök och badrum med dusch. Ni kan bo 4-5 personer i huset. Skrakboet har varmt och kallt vatten och är isolerat så ni kan bo där året runt.
+Mot Vierydsfjorden ligger en stor altan där ni kan ha lugna stunder i solstolen eller äta era måltider under bar himmel. Ni kan välja självhushåll med möjlighet att hyra sänglinne och handdukar eller Bed & Breakfast då frukost, sänglinne, handdukar ingår.</p>
+
+<div class="footer">
+<img src="img/skrakar.png" class="bildv">
+<p class="helvetica">Ängholma Bed & Breakfast, Blekinge <br>
+Väbynäsvägen 1, 372 63 Bräkne-Hoby, Sverige • Tel. +46 (0)733-992065 • <a href="mailto:welcome@angholma.se">welcome@angholma.se</a></p>
+</div>
 </div>
 </div>
 </div>
@@ -57,5 +67,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <script src="js/javas.js"></script>
   </body>
 </html>
