--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <div class="row">
   <div class="col-md-12">
   <img src="img/angholm.png" class="marguv" class="bildv">
-  <img src="img/tysk.gif" class="bildh">
-  <img src="img/eng.gif" class="bildh">
+  <img src="img/tysk.gif" class="bildh" onclick="språk()">
+  <img src="img/eng.gif" class="bildh" onclick="språk()">
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,5 +71,6 @@ Väbynäsvägen 1, 372 63 Bräkne-Hoby, Sverige • Tel. +46 (0)733-992065 • <
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <script src="js/javas.js"></script>
   </body>
 </html>
