--- a/skrakboet.html
+++ b/skrakboet.html
@@ -53,6 +53,52 @@
 Skrakboet är ett ljust och fräscht hus på drygt 50 m2, med två sovrum, vardagsrum, fullt utrustat kök och badrum med dusch. Ni kan bo 4-5 personer i huset. Skrakboet har varmt och kallt vatten och är isolerat så ni kan bo där året runt.
 Mot Vierydsfjorden ligger en stor altan där ni kan ha lugna stunder i solstolen eller äta era måltider under bar himmel. Ni kan välja självhushåll med möjlighet att hyra sänglinne och handdukar eller Bed & Breakfast då frukost, sänglinne, handdukar ingår.</p>
 
+<div class="container">
+<div class="row">
+<div class="col-md-4">
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" height="500px">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="img/skrakboet.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/vardagsrum.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/vardagsrum2.jpg" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/säng.jpg" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/bunksäng.jpg" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/frukost.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
+</div>
+</div>
+
 <div class="footer">
 <img src="img/skrakar.png" class="bildv">
 <p class="helvetica">Ängholma Bed & Breakfast, Blekinge <br>
