--- a/skrakboet.html
+++ b/skrakboet.html
@@ -69,21 +69,45 @@ Mot Vierydsfjorden ligger en stor altan där ni kan ha lugna stunder i solstolen
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="img/skrakboet.jpg" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Skrakboet</h5>
+        <p>Utomhusvy på Skrakboet</p>
+      </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="img/vardagsrum.jpg" alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Vardagsrummet</h5>
+        <p>Vardagsrummet i Skrakboet</p>
+      </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="img/vardagsrum2.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Köket</h5>
+        <p>Skrakboets kök</p>
+      </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="img/säng.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Säng</h5>
+        <p>En säng i stugan</p>
+      </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="img/bunksäng.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Bunksäng</h5>
+        <p>En bunksäng i stugan</p>
+      </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="img/frukost.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Frukost</h5>
+        <p>Här serveras god frukost!</p>
+      </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
