--- a/bokning.html
+++ b/bokning.html
@@ -17,7 +17,7 @@
   <div class="container">
   <div class="row">
   <div class="col-md-12">
-  <img src="img/angholm.png" class="marguv" class="bildv">
+  <a href="index.html"><img src="img/angholm.png" class="marguv" class="bildv"></a>
   <img src="img/tysk.gif" class="bildh" onclick="språk()">
   <img src="img/eng.gif" class="bildh" onclick="språk()">
     
