--- a/kontakt.html
+++ b/kontakt.html
@@ -27,22 +27,22 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <li class="nav-item menyt">
         <a class="nav-link" href="index.html">Ängholma B&B</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item menyt">
         <a class="nav-link" href="oss.html">Om oss</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item menyt">
         <a class="nav-link" href="skrakboet.html">Skrakboet</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item menyt">
         <a class="nav-link " href="bokning.html">Bokning</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item menyt">
         <a class="nav-link " href="aktiviteter.html">Utflykter / Aktiviteter</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item menyt aktiv">
         <a class="nav-link " href="kontakt.html">Kontakt <span class="sr-only">(current)</span></a>
       </li>
     </ul>
