--- a/skrakboet.html
+++ b/skrakboet.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="sv">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -27,22 +27,22 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <li class="nav-item menyt">
         <a class="nav-link" href="index.html">Ängholma B&B</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="oss.html">Om oss <span class="sr-only">(current)</span></a>
+      <li class="nav-item menyt">
+        <a class="nav-link" href="oss.html">Om oss</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item menyt aktiv">
         <a class="nav-link" href="skrakboet.html">Skrakboet <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item menyt">
         <a class="nav-link " href="bokning.html">Bokning</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item menyt">
         <a class="nav-link " href="aktiviteter.html">Utflykter / Aktiviteter</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item menyt">
         <a class="nav-link " href="kontakt.html">Kontakt</a>
       </li>
     </ul>
@@ -50,14 +50,21 @@
 </nav>
 
 <p>Kom och bo i Skrakboet på Ängholma Bed & Breakfast i Blekinge!
-Skrakboet är ett ljust och fräscht hus på drygt 50 m2, med två sovrum, vardagsrum, fullt utrustat kök och badrum med dusch. Ni kan bo 4-5 personer i huset. Skrakboet har varmt och kallt vatten och är isolerat så ni kan bo där året runt.
+Skrakboet är ett ljust och fräscht hus på drygt 50 m2 med två sovrum, vardagsrum, fullt utrustat kök och badrum med dusch. Ni kan bo 4-5 personer i huset. Skrakboet har varmt och kallt vatten och är isolerat så ni kan bo där året runt.
 Mot Vierydsfjorden ligger en stor altan där ni kan ha lugna stunder i solstolen eller äta era måltider under bar himmel. Ni kan välja självhushåll med möjlighet att hyra sänglinne och handdukar eller Bed & Breakfast då frukost, sänglinne, handdukar ingår.</p>
 
 <div class="container">
 <div class="row">
-<div class="col-md-4">
+<div class="col-md-12">
+  <h3 class="centr">Galleri Skrakboet</h3>
+  <img src="img/skrakboet.jpg" class="gallmarg">
+  <img src="img/vardagsrum.jpg" class="gallmarg">
+  <img src="img/vardagsrum2.jpg" class="gallmarg">
+  <img src="img/bunksäng.jpg" class="gallmarg">
+  <img src="img/säng.jpg" class="gallmarg">
+  <img src="img/frukost.jpg" class="gallmarg">
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" height="500px">
+<!--<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" height="500px">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -68,42 +75,42 @@ Mot Vierydsfjorden ligger en stor altan där ni kan ha lugna stunder i solstolen
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="img/skrakboet.jpg" alt="First slide">
+      <img class="d-block w-100" src="img/skrakboet.jpg" alt="Första bilden">
       <div class="carousel-caption d-none d-md-block">
         <h5>Skrakboet</h5>
         <p>Utomhusvy på Skrakboet</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/vardagsrum.jpg" alt="Second slide">
+      <img class="d-block w-100" src="img/vardagsrum.jpg" alt="Andra bilden">
       <div class="carousel-caption d-none d-md-block">
         <h5>Vardagsrummet</h5>
         <p>Vardagsrummet i Skrakboet</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/vardagsrum2.jpg" alt="Third slide">
+      <img class="d-block w-100" src="img/vardagsrum2.jpg" alt="Tredje bilden">
       <div class="carousel-caption d-none d-md-block">
         <h5>Köket</h5>
         <p>Skrakboets kök</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/säng.jpg" alt="Third slide">
+      <img class="d-block w-100" src="img/säng.jpg" alt="Fjärde bilden">
       <div class="carousel-caption d-none d-md-block">
         <h5>Säng</h5>
         <p>En säng i stugan</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/bunksäng.jpg" alt="Third slide">
+      <img class="d-block w-100" src="img/bunksäng.jpg" alt="Femte bilden">
       <div class="carousel-caption d-none d-md-block">
         <h5>Bunksäng</h5>
         <p>En bunksäng i stugan</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/frukost.jpg" alt="Third slide">
+      <img class="d-block w-100" src="img/frukost.jpg" alt="Sjätte bilden">
       <div class="carousel-caption d-none d-md-block">
         <h5>Frukost</h5>
         <p>Här serveras god frukost!</p>
@@ -118,7 +125,7 @@ Mot Vierydsfjorden ligger en stor altan där ni kan ha lugna stunder i solstolen
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
+</div>-->
 </div>
 </div>
 </div>
