fixade bilderna i skrakboet

--- a/skrakboet.html
+++ b/skrakboet.html
@@ -57,10 +57,10 @@ Mot Vierydsfjorden ligger en stor altan där ni kan ha lugna stunder i solstolen
 <div class="row">
 <div class="col-md-12">
   <h3 class="centr">Galleri Skrakboet</h3>
-  <img src="img/skrakboet.jpg" class="gallmarg">
+  <img src="img/skrakboet.jpg" class="gallmarg" height="262px">
   <img src="img/vardagsrum.jpg" class="gallmarg">
   <img src="img/vardagsrum2.jpg" class="gallmarg">
-  <img src="img/bunksäng.jpg" class="gallmarg">
+  <img src="img/bunksäng.jpg" class="gallmarg" height="262px">
   <img src="img/säng.jpg" class="gallmarg">
   <img src="img/frukost.jpg" class="gallmarg">
 
