--- a/skrakboet.html
+++ b/skrakboet.html
@@ -49,7 +49,7 @@
   </div>
 </nav>
 
-<p>Kom och bo i Skrakboet på Ängholma Bed & Breakfast i Blekinge!
+<p class="helvetica">Kom och bo i Skrakboet på Ängholma Bed & Breakfast i Blekinge!
 Skrakboet är ett ljust och fräscht hus på drygt 50 m2 med två sovrum, vardagsrum, fullt utrustat kök och badrum med dusch. Ni kan bo 4-5 personer i huset. Skrakboet har varmt och kallt vatten och är isolerat så ni kan bo där året runt.
 Mot Vierydsfjorden ligger en stor altan där ni kan ha lugna stunder i solstolen eller äta era måltider under bar himmel. Ni kan välja självhushåll med möjlighet att hyra sänglinne och handdukar eller Bed & Breakfast då frukost, sänglinne, handdukar ingår.</p>
 
