--- a/skrakboet.html
+++ b/skrakboet.html
@@ -53,6 +53,10 @@
 Skrakboet är ett ljust och fräscht hus på drygt 50 m2 med två sovrum, vardagsrum, fullt utrustat kök och badrum med dusch. Ni kan bo 4-5 personer i huset. Skrakboet har varmt och kallt vatten och är isolerat så ni kan bo där året runt.
 Mot Vierydsfjorden ligger en stor altan där ni kan ha lugna stunder i solstolen eller äta era måltider under bar himmel. Ni kan välja självhushåll med möjlighet att hyra sänglinne och handdukar eller Bed & Breakfast då frukost, sänglinne, handdukar ingår.</p>
 
+<p class="helvetica">Skrakboet är en perfekt utgångspunkt för fågelskådning, fiske och golf – aktiviteter som är möjliga från tidig vår och långt in på hösten.</p>
+
+<p class="helvetica">Rökning är inte tillåtet och tyvärr kan ni inte ta med er era husdjur till Skrakboet.</p>
+
 <div class="container">
 <div class="row">
 <div class="col-md-12">
