om oss-sidan: text + bilder

--- a/oss.html
+++ b/oss.html
@@ -49,6 +49,49 @@
   </div>
 </nav>
 
+<div class="text-familj bildh2">
+  <img src="img/familjen.jpg" width="340px" height="295px">
+  <p>Familjen Malmport</p>
+</div>
+
+<p class="helvetica">I huvudbyggnaden på Ängholma Bed & Breakfast bor familjen Malmport. Familjen består av Michael, Eva, Johan och Hugo. De övriga familjemedlemmarna i dagsläget är katterna Sigge och Caesar, Rhodesian Ridgeback hunden Faxe, hans son Jusse och Australian Kelpien Togg.</p>
+
+<p class="helvetica">Vi ser fram emot att få välkomna er i Skrakboet och göra det bästa för att ni ska trivas. Vår strävan är att ge er ett mer personligt, rogivande boende med nära tillgång till havet. Här ska ni kunna koppla av, umgås och ladda batterierna.</p>
+
+<p class="helvetica aktiv">Vi finns här för er för att vi vill ge er det lilla extra!</p>
+
+
+<br>
+<br>
+<br>
+<br>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <figure>
+        <img src="img/faxe.jpg" alt="Faxe" class="gallmarg" width="157px" height="139px">
+        <p>Faxe</p>
+      </figure>
+      <figure>
+        <img src="img/jusse.jpg" alt="Jusse" class="gallmarg" width="156px" height="146px">
+        <p>Jusse</p>
+      </figure>
+      <figure>
+        <img src="img/togg.jpg" alt="Togg" class="gallmarg" width="154px" height="141px">
+        <p>Togg</p>
+      </figure>
+      <figure>
+        <img src="img/caesar.jpg" alt="Caesar" class="gallmarg" width="180px" height="175px">
+        <p>Caesar</p>
+      </figure>
+      <figure>
+        <img src="img/sigge.jpg" alt="Sigge" class="gallmarg" width="226px" height="146px">
+        <p>Sigge</p>
+      </figure>
+    </div>
+  </div>
+</div>
 
 
 
