--- a/oss.html
+++ b/oss.html
@@ -54,7 +54,7 @@
   <p>Familjen Malmport</p>
 </div>
 
-<p class="helvetica">I huvudbyggnaden på Ängholma Bed & Breakfast bor familjen Malmport. Familjen består av Michael, Eva, Johan och Hugo. De övriga familjemedlemmarna i dagsläget är katterna Sigge och Caesar, Rhodesian Ridgeback hunden Faxe, hans son Jusse och Australian Kelpien Tog.</p>
+<p class="helvetica">I huvudbyggnaden på Ängholma Bed & Breakfast bor familjen Malmport. Familjen består av Michael, Eva, Johan och Hugo. De övriga familjemedlemmarna i dagsläget är katterna Sigge och Caesar, Rhodesian Ridgeback hunden Faxe, hans son Jusse och Australian Kelpien Togg.</p>
 
 <p class="helvetica">Vi ser fram emot att få välkomna er i Skrakboet och göra det bästa för att ni ska trivas. Vår strävan är att ge er ett mer personligt, rogivande boende med nära tillgång till havet. Här ska ni kunna koppla av, umgås och ladda batterierna.</p>
 
