klar med hemsidan + kontakt borttagen

--- a/bokning.html
+++ b/bokning.html
@@ -42,12 +42,105 @@
       <li class="nav-item menyt">
         <a class="nav-link " href="aktiviteter.html">Utflykter / Aktiviteter</a>
       </li>
-      <li class="nav-item menyt">
-        <a class="nav-link " href="kontakt.html">Kontakt</a>
-      </li>
     </ul>
   </div>
 </nav>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h3>Som gäst på Ängholma Bed & Breakfast har ni utan kostnad tillgång till:</h3>
+      <p class="helvetica">• Båt, vid den lilla Skrakbo-spången och flytväst <br>
+      • Cyklar <br>
+      • Grill och utemöbler på altan och också solstolar <br>
+      • Windsurfingbräda <br>
+      • Vår privata brygga med bad <br>
+      • Studsmatta <br>
+      • Trädgårdsspel såsom krocket, boule och kubb <br>
+      • Kök (kyl, frys, mikro, vattenkokare, kaffebryggare, spis, ugn och de &nbsp;&nbsp;kökstillbehör man normalt använder) <br>
+      • Badrum (toalett, dusch och handfat) <br>
+      • Vardagsrum (böcker, spel och pussel) <br>
+      • Sovrum (gott om garderober och lådor för era kläder). <br>
+      • Slutstädning som vi sköter <br>
+      • Trådlöst nätverk</p>
+    </div>
+    <div class="col-md-6">
+      <h3>Priser & val</h3>
+      <br>
+
+      <table width="293px" border="1" cellpadding="2" cellspacing="0">
+        
+        <tr>
+          <td colspan="4" bgcolor="#FFFFFF" class="tabellredfet">
+            Pris Självhushåll (SEK per person o natt)            
+          </td>
+        </tr>
+
+        <tr>
+          <td width="83px" bgcolor="#A01F34" class="tabellvitfet">
+            Månad&nbsp;&nbsp;
+          </td>
+          <td width="56px" bgcolor="#A01F34" class="tabellvitfet">
+            Nov-Mar&nbsp;&nbsp;
+          </td>
+          <td width="73px" bgcolor="#A01F34" class="tabellvitfet">
+            Apr-Maj <br>
+            Sept-Okt&nbsp;&nbsp;
+          </td>
+          <td width="55px" bgcolor="#A01F34" class="tabellvitfet">
+            Jun-Aug&nbsp;&nbsp;
+          </td>
+        </tr>
+
+        <tr>
+          <td bgcolor="#A01F34" class="tabellvit">
+            Vuxen
+          </td>
+          <td bgcolor="#A01F34" class="tabellvit">
+            270:-
+          </td>
+          <td bgcolor="#A01F34" class="tabellvit">
+            310:-
+          </td>
+          <td bgcolor="#A01F34" class="tabellvit">
+            330:-
+          </td>
+        </tr>
+
+        <tr>
+          <td bgcolor="#A01F34" class="tabellvit">
+            Barn < 13 år
+          </td>
+          <td bgcolor="#A01F34" class="tabellvit">
+            135:-
+          </td>
+          <td bgcolor="#A01F34" class="tabellvit">
+            155:-
+          </td>
+          <td bgcolor="#A01F34" class="tabellvit">
+            165:-
+          </td>
+        </tr>
+      </table>
+
+      <br>
+
+      <p class="helvetica">Hyra av sänglinne och handdukar: <br>
+      60 kr per person och byte <br>
+      Extra städning/bäddning: 200 kr <br>
+      Vid behov går det bra att låna strykjärn och hårtork</p>
+
+      <p class="helvetica aktiv pmarg">Härligt välsmakande frukostbuffé, sänglinne och handdukar:</p>
+      <p>Vuxna: 75 kr per person och natt <br>
+      Barn: 50 kr per barn och natt</p>
+
+
+      <p class="helvetica aktiv pmarg">Om ni är färre än 3 personer:</p>
+      <p class="helvetica">Vänligen observera om ni garanterat vill ha huset själva, ber vi er om en extra avgift
+      (= pris för en person) för det lediga sovrummet, som vi då inte kan boka in andra gäster i.</p>
+    </div>
+  </div>
+</div>
 
 <div class="footer">
 <img src="img/skrakar.png" class="bildv">
