--- a/kontakt.html
+++ b/kontakt.html
@@ -42,12 +42,12 @@
       <li class="nav-item menyt">
         <a class="nav-link " href="aktiviteter.html">Utflykter / Aktiviteter</a>
       </li>
-      <li class="nav-item menyt aktiv">
-        <a class="nav-link " href="kontakt.html">Kontakt <span class="sr-only">(current)</span></a>
-      </li>
     </ul>
   </div>
 </nav>
+
+<br>
+<p align="center" class="helvetica aktiv">det står väl en hel del i sidfoten</p>
 
 <div class="footer">
 <img src="img/skrakar.png" class="bildv">
