javascript klocka och video

--- a/aktiviteter.html
+++ b/aktiviteter.html
@@ -13,13 +13,14 @@
   </head>
 
 
-  <body>
+  <body onload="startTime()">
   <div class="container">
   <div class="row">
   <div class="col-md-12">
   <a href="index.html"><img src="img/angholm.png" class="marguv" class="bildv"></a>
   <img src="img/tysk.gif" class="bildh" onclick="språk()">
   <img src="img/eng.gif" class="bildh" onclick="språk()">
+  <div id="txt" align="center"></div>
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -115,6 +116,9 @@ För utflykten finns det mycket i närheten. I Blekinge är det inte långt till
     <p>• <a href="">Astrid Lindgrens Värld</a> - Ungefär 220 km från Ängholma hittar du Pippi Långstrump, Emil, Ronja, Karlsson på Taket med flera.</p>
 
     <p>• <a href="">Hanö</a> - ett vackert besöksmål som du når med båt från Nogersund på Listerlandet i västra Blekinge.</p>
+    <video width="500px" height="300px" controls>
+      <source src="vid/hanö.mp4">
+    </video>
 
     </div>
   </div>
