--- a/oss.html
+++ b/oss.html
@@ -13,13 +13,14 @@
   </head>
 
 
-  <body>
+  <body onload="startTime()">
   <div class="container">
   <div class="row">
   <div class="col-md-12">
   <a href="index.html"><img src="img/angholm.png" class="marguv" class="bildv"></a>
   <img src="img/tysk.gif" class="bildh" onclick="språk()">
   <img src="img/eng.gif" class="bildh" onclick="språk()">
+  <div id="txt" align="center"></div>
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
