--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
   <div class="row">
   <div class="col-md-12">
-  <img src="img/angholm.png" class="marguv" class="bildv">
+  <img src="img/angholm.png" class="marguv bildv">
   <img src="img/tysk.gif" class="bildh" onclick="språk()">
   <img src="img/eng.gif" class="bildh" onclick="språk()">
   <div id="txt" align="center"></div>
